# heat-extremes

./: .gitignore  README.md  environment.yaml  london_casestudy.ipynb  plotting.ipynb  precip_plotting.ipynb  pyproject.toml  t2m_daily_max_2022-2025_day1.3.5.ipynb
heatextremes/: __init__.py  forecast_days.py  open_aifs_ensv2.py  open_cached_era5.py
heatextremes/metrics/: __init__.py  _verification.py  batches.py  coverage.py  poe_brier_score.py  selection.py
notebooks/: ensemble_forecast_maps.ipynb  ensemble_verification_metrics.ipynb  ensemble_verification_metrics_test.ipynb  era5_clim.ipynb  exploratory.ipynb
scripts/era5_arco_cache/: README.md  cache_era5_arco_year.py  environment.yml  submit_era5_arco_cache.sbatch  validate_era5_arco_cache.py
scripts/precipitation_verification/: 01_build_daily_forecast_precipitation.sbatch  02_build_matched_era5_precipitation.sbatch  03_calculate_precipitation_metrics.sbatch  04_aggregate_and_plot_precipitation_metrics.sbatch  README.md  build_daily_forecast_precipitation.py  build_matched_era5_precipitation.py  calculate_precipitation_metrics.py  submit_precipitation_verification.sh
scripts/t2m_verification/: 01_build_t2m_forecast_aggregates.sbatch  02_build_t2m_era5_aggregates.sbatch  03_calculate_t2m_metrics.sbatch  (+7 more)
tests/: test_batches.py  test_coverage.py  test_era5_arco_cache.py  test_forecast_days.py  test_open_aifs_ensv2.py  test_open_cached_era5.py  test_poe_brier_score.py  test_t2m_verification_scripts.py  test_valid_time_selection.py
wb2_era5_cache/: README.md  environment.yml  validate_wb2_era5_cache.py
(+2 files in other folders)
