[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatextremes"
version = "0.1.0"
description = "Tools for analyzing and evaluating heat-extreme forecasts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kyle Hall" }
]

dependencies = [
  "numpy>=1.26",
  "xarray>=2024.1",
  "dask[array]>=2024.1",
  "netCDF4>=1.6",
  "zarr>=2.18,<3",
  "matplotlib>=3.8",
  "cartopy>=0.22",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyterlab",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["heatextremes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"